completed feature register user
