# internal/services/auth/application/command/handler/http_handler.go
@@ -13,6 +13,45 @@ type authCommandHandler struct {
 	logger *zap.Logger
 }
 
+// User Base Registration
+// @Summary      User Base Registration
+// @Description  When user has registered send otp to email
+// @Tags         account management
+// @Accept       json
+// @Produce      json
+// @Param        payload body authcommandrequest.SaveAccountRequest true "payload"
+// @Success      200  {object}  response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /auth/save-account [post]
+func (a *authCommandHandler) SaveAccount(ctx *gin.Context) {
+
+	// check token
+	var body authcommandrequest.SaveAccountRequest
+
+	// Parse JSON payload
+	if err := ctx.ShouldBindJSON(&body); err != nil {
+		a.logger.Warn("Invalid registration payload",
+			zap.String("trace_id", ctx.GetString("trace_id")),
+			zap.Error(err),
+		)
+		response.ErrorResponse(ctx, response.ErrCodeParamInvalid, err.Error())
+		return
+	}
+
+	code, err := a.acs.SaveAccount(ctx.Request.Context(), &body)
+	if err != nil {
+		a.logger.Error("User registration failed",
+			zap.String("trace_id", ctx.GetString("trace_id")),
+			zap.String("email", body.Email),
+			zap.Int("err_code", code),
+			zap.Error(err),
+		)
+		response.ErrorResponse(ctx, code, err.Error())
+		return
+	}
+	response.SuccessResponse(ctx, code, nil)
+}
+
 // User Verification OTP documentation
 // @Summary      Verify OTP
 // @Description  When user is verified otp from email
